[package]
name = "arp-spoofing-detector"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes" ] }
clap = { version = "4.1.8", features = [ "derive" ]}
syslog = "6.0.1"
log = "0.4.17"
serde_json = "1.0.95"