[package]
name = "arp-spoofing-detector"
version = "1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = [ "derive" ]}
serde_json = "1.0.95"
encoding_rs = "0.8.32"
windows-service = "0.6.0"